--- a/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
+++ b/Gameception/Assinante/Templates/Assinante/HistoricoPedido.html
@@ -9,10 +9,9 @@
 </head>
 <body>
       <h1>HISTÓRICO</h1>
-      <h2>{{pedido.data}}</h2>
+      <h2> Data de envio: {{pedido.data}}</h2>
 
       {% if digital %}
-      dig {{pedido.numero}}<br>
 
       <div class="row">
         <div class="col-sm-6 col-md-4">
@@ -21,7 +20,7 @@
             <div class="caption">
               <h3>{{chave.jogo.nome}}</h3>
               <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{chave.jogo.img1}}/header.jpg?t={{chave.jogo.img2}}" alt="{{chave.jogo.nome}}" /><br>
-              Chave de Download: {{chave.chave}}
+              <h4>Chave de Download: {{chave.chave}}</h4>
             </div>
           </div>
           {% endfor %}
@@ -29,7 +28,6 @@
       </div>
 
       {% else %}
-      fis <br>
       <div class="row">
         <div class="col-sm-6 col-md-4">
           {% for jogo in pedido.jogosPedidos.all %}
@@ -42,20 +40,21 @@
           {% endfor %}
         </div>
       </div>
-      Código de rastreamento: {{pedido.codigoRastreamento}}<br>
+      <h4>Código de rastreamento: {{pedido.codigoRastreamento}}</h4><br>
 
       {% endif %}
 
 
       {% if pode_sucessor %}
-      <div class="">
-        <br><a href="/Assinante/Historico/{{sucessor}}/">Próxima entrega</a><br>
-      </div>
+      <form action="/Assinante/Historico/{{sucessor}}/">
+        <input type="submit" value="Próxima entrega" class="btn-primary">
+      </form>
       {% endif %}
+
       {% if pode_antecessor %}
-      <div class="">
-        <br><a href="/Assinante/Historico/{{antecessor}}/">Entrega anterior</a><br>
-      </div>
+      <form action="/Assinante/Historico/{{antecessor}}/">
+        <input type="submit" value="Entrega anterior" class="btn-primary">
+      </form>
       {% endif %}
 </body>
 </html>
