--- a/Gameception/InfoGeral/Templates/Infos/Contatos.html
+++ b/Gameception/InfoGeral/Templates/Infos/Contatos.html
@@ -8,7 +8,42 @@
     <title>Title</title>
 </head>
 <body>
-<h1>CONTATOS</h1>
+    <section style="padding:50px; border:3px solid #000000; position: absolute; margin:auto; left:30%; vertical-align:middle">
+        <div style="float:left; padding:50px">
+
+            <div>
+                <a href="https://www.facebook.com/Steam/?fref=ts" target="_blank">
+                    Facebook
+                </a>
+            </div>
+
+            <br><br>
+
+            <div>
+                <a href="{% url 'Home' %}" target="_blank">
+                    Twitter
+                </a>
+            </div>
+
+        </div>
+        <div style="float:left; padding:50px">
+
+            <div>
+                <a href="{% url 'Home' %}" target="_blank">
+                    Tumblr
+                </a>
+            </div>
+
+            <br><br>
+
+            <div>
+                <a href="{% url 'Home' %}" target="_blank">
+                    Instagram
+                </a>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
 {% endblock %}
