--- a/Gameception/InfoGeral/Templates/Infos/Sobre.html
+++ b/Gameception/InfoGeral/Templates/Infos/Sobre.html
@@ -8,7 +8,24 @@
     <title>Title</title>
 </head>
 <body>
-<h1>SOBRE</h1>
+<header style="font-size:180%">
+    Entenda nosso funcionamento
+</header><br>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet nibh eget urna dictum elementum. Vivamus in tellus sodales, elementum urna non, semper leo. Fusce accumsan leo eu scelerisque aliquet. Mauris tincidunt ut nisl in lobortis. Donec ut pellentesque velit, sit amet porttitor leo. Donec venenatis sagittis nisl, ac euismod nisi tristique a. Suspendisse vestibulum ac ipsum vel lacinia. Cras id neque vitae est ullamcorper semper. Nunc dui eros, cursus sed feugiat ac, ultrices at nisi. Cras nibh elit, tincidunt sagittis risus sed, laoreet auctor urna.
+</p><br>
+<p>
+    Fusce fringilla lectus ac arcu porttitor, sed porttitor purus pretium. Proin in ante sed turpis tempor finibus eget non enim. Cras purus sapien, congue id metus vitae, sodales consectetur velit. Nunc ac ex in sem tempor imperdiet id quis purus. Praesent quis facilisis quam. In porta interdum elit, sit amet imperdiet purus porta et. Mauris ornare malesuada lorem. Nulla facilisis ante vel mattis bibendum. Praesent eleifend massa mattis nulla finibus, et facilisis ex dapibus. Aenean tempus venenatis ex id placerat. Suspendisse pellentesque elit eget pharetra condimentum. Proin malesuada purus sapien, nec pellentesque urna dignissim ut. Donec id risus tristique quam venenatis venenatis.
+</p><br>
+<p>
+    Nullam ultricies ipsum quis augue dignissim, vel ullamcorper libero placerat. In imperdiet non sem eu rutrum. Aliquam mauris risus, fringilla vel turpis eget, suscipit fermentum nisl. Vivamus a egestas risus. Mauris efficitur venenatis leo, sed consectetur tortor vulputate vel. Maecenas aliquet sem quis commodo rutrum. Aenean hendrerit urna ut quam varius luctus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis convallis cursus tempus. Quisque ac vehicula sem, ut ultricies sem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque augue tortor, blandit at odio vestibulum, viverra fringilla justo. Ut aliquet rhoncus tellus, eget vehicula dui ornare quis. Vestibulum in eleifend orci, vel venenatis enim.
+</p><br>
+<p>
+    Curabitur quis odio ut lorem rutrum condimentum nec nec purus. Cras sollicitudin lacus eu mi varius vehicula. Duis sed efficitur leo. Donec aliquet efficitur ligula nec dapibus. Pellentesque pulvinar, augue ut pretium dapibus, metus augue eleifend neque, quis tincidunt metus ante id magna. Sed vehicula eu dui in facilisis. Aenean venenatis urna non condimentum pharetra. Aliquam erat volutpat. Quisque lobortis leo ut odio placerat consequat. Donec mattis lorem vitae sem consectetur imperdiet. Nam tristique mi in dui venenatis, ut pulvinar enim varius. Etiam dui ligula, feugiat eu pharetra ut, lobortis nec erat. Mauris scelerisque, risus sed aliquam tempor, urna purus interdum justo, et placerat velit urna quis dolor. Aenean id odio porttitor, venenatis massa vel, vestibulum libero.
+</p><br>
+<p>
+    In hac habitasse platea dictumst. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam ornare nunc quis nibh porttitor hendrerit. Nam pellentesque turpis sit amet mi malesuada ornare. Nullam risus urna, efficitur at tortor id, rutrum aliquet turpis. Suspendisse vel erat ante. Cras congue viverra est vel elementum. Nullam pretium finibus lobortis. Fusce posuere fringilla nulla, vestibulum venenatis purus suscipit sed. Phasellus quis posuere lectus. Donec consequat eleifend sodales.
+</p><br>
 </body>
 </html>
 {% endblock %}
