--- a/Gameception/Assinante/Templates/Assinante/Assinante.html
+++ b/Gameception/Assinante/Templates/Assinante/Assinante.html
@@ -70,7 +70,7 @@
                   <strong>{{genero.nome}}</strong><br>
                 {% endfor %}
               processador <strong>{{assinatura.processador.proc}}</strong><br>
-              <a href="{% url 'CadastroAssinatura' %}">Editar assinatura</a>
+              <a href="{% url 'CadastroAssinatura' %}"><button>Editar assinatura</button></a>
             {% else %}
               Você desativou sua assinatura...
               <a href="{% url 'CadastroAssinatura' %}">Edite sua assinatura para reativá-la</a>
@@ -102,11 +102,11 @@
           {% if tem_infos_endereco %}
             <strong>Rua</strong> {{infos_endereco.rua}},{{infos_endereco.numeroRua}},{{infos_endereco.complemento}} <br>
             <strong>CEP</strong> {{infos_endereco.CEP}} <br>
-            <a href="{% url 'CadastroEndereco' %}">Editar informações de endereco</a>
+            <a href="{% url 'CadastroEndereco' %}"><button>Editar informações de endereco</button></a>
           {% else %}
           Você ainda não registrou suas informações de endereço...
           <a href="{% url 'CadastroEndereco' %}"><br>
-            Registrar suas informações de endereço!</a>
+            <button>Registrar suas informações de endereço!</button></a>
           {% endif %}
         </div>
       </div>
@@ -120,11 +120,11 @@
             <strong>Titular</strong> {{infos_pagamento.nomeTitular}} <br>
             <strong>Nº Cartao</strong> {{infos_pagamento.numeroCartao}} <br>
             <strong>Código de seguranca</strong> {{infos_pagamento.codigoSeguranca}} <br>
-            <a href="{% url 'InfoPagamento' %}">Editar informações de pagamento</a>
+            <a href="{% url 'InfoPagamento' %}"><button>Editar informações de pagamento</button></a>
           {% else %}
             Você ainda não registrou suas informações de pagamento...
             <a href="{% url 'InfoPagamento' %}"><br>
-              Registrar suas informações de pagamento!</a>
+              <button>Registrar suas informações de pagamento!</button></a>
           {% endif %}
         </div>
       </div>
@@ -134,10 +134,41 @@
           <div class="panel-heading">
             <h3 class="panel-title">Outras opções</h3>
           </div>
-          <a href="#">Editar senha e nome de usuário</a> <br>
-          <a href="{% url 'ContatoAdmin' %}">Contatar um administrador</a> <br>
+          <a href="{% url 'EditarCadastro' %}"><button>Editar informações de cadastro</button></a> <br><br>
+
+            <a href="" data-toggle="modal" data-target="#myModal"><button>Contatar um administrador</button></a>
+           <br>
         </div>
       </div>
 
+
+    <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+              </div>
+              <div class="modal-body">
+                  <form>
+                      Nome:<br>
+                      <input type="text" name="firstname">
+                      <br>
+                      e-mail:<br>
+                      <input type="text" name="lastname">
+                      <br>
+                      Mensagem:<br>
+                      <textarea rows="4" cols="50"></textarea>
+                  </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+                <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
     {% endblock %}
