--- a/Gameception/Assinante/Templates/MainPage.html
+++ b/Gameception/Assinante/Templates/MainPage.html
@@ -65,7 +65,7 @@
              <a href="{% url 'Historico' %}">Meu Historico de Jogos</a> <br>
            </div>
           {% endif %}
-
+          {% block side %}{% endblock %}
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
            <div>
