--- a/Gameception/Acervo/Templates/Acervo/Acervo.html
+++ b/Gameception/Acervo/Templates/Acervo/Acervo.html
@@ -8,11 +8,11 @@
     <title>Title</title>
 </head>
 <body>
-  <h2>Categorias:</h2>
-  {% for genero in generos %}
-  <a href="../../../Acervo/{{genero.nome}}">{{genero.nome}}</a>
-  {% endfor %}
-  {% if not filtrado %}
+
+  {% if nomeFiltro %}
+  <h2>{{nomeFiltro}}</h2>
+  {% endif %}
+
   {% for jogo in jogos %}
   <div class="row" style="float: left; padding: 20px">
     <div>
@@ -30,31 +30,21 @@
     </div>
   </div>
   {% endfor %}
-  {% else %}
-   {% for jogo in jogos %}
-    {% for genero in jogo.listaGeneros.all %}
-    {% if genero.nome == gen %}
-   <div class="row" style="float: left; padding: 20px">
-    <div>
-      <div class="thumbnail">
-        <img src="http://cdn.akamai.steamstatic.com/steam/apps/{{jogo.img1}}/header.jpg?t={{jogo.img2}}" style="width: 460px; height: 215px">
-        <div class="caption">
-          <h3>{{ jogo.nome }}</h3>
-          <p>Gêneros: </p>
-          {% for genero in jogo.listaGeneros.all %}
-          <p>{{ genero.nome }}</p>
-          {% endfor %}
-          <p>x y z</p>
-        </div>
-      </div>
-    </div>
-   </div>
-      {% endif %}
-     {% endfor %}
-    {% endfor %}
-   {% endif %}
 
 
 </body>
 </html>
+{% endblock %}
+
+
+{% block side %}
+
+<h2>Categorias de jogos:</h2>
+
+{% for genero in generos %}
+<form action="../../../Acervo/{{genero.nome}}">
+  <input type="submit" value="{{genero.nome}}" class="btn-primary">
+</form><br>
+{% endfor %}
+
 {% endblock %}
