--- a/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
+++ b/Gameception/Assinante/Templates/Assinante/CadastroEndereco.html
@@ -2,97 +2,40 @@
 
 {% block content %}
 
-      <h1>Suas informações de endereço</h1>
-
-        {% if registrado %}
-        Obrigado por registrar seu endereço!
+    {% if registrado %}
+        Obrigado por registrar seu endereço!<br/>
         <a href="{% url 'MinhaConta' %}">voltar para a sua conta</a><br />
 
-        {% else %}
-
-        {% if atual_endereco %}
-        <strong>Registre seu endereço:</strong><br/><br/>
-        <form role="form" action="{% url 'CadastroEndereco' %}" method="post">
+    {% else %}
+        <form role="form" action="/Assinante/Endereco/" method="post">
             {% csrf_token %}
-            {{ endereco_form.non_field_errors }}
-            <div class="form-group" >
-                <p class="required">
-                    <label for="id_rua">Rua:</label> <input  class="form-control"  id="id_rua" name="rua" type="text" value={{atual_endereco.rua}} />
-                </p>
-            </div>
-            <div class="form-group" >
-                {{ endereco_form.numeroRua.errors }}
-                <p class="required">
-                    <p><label for="id_numeroRua">Numero:</label> <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" value={{atual_endereco.numeroRua}} /></p>
-                </p>
-            </div>
-            <div class="form-group" >
-                {{ endereco_form.complemento.errors }}
-                <p class="required">
-                    <label for="id_complemento">Complemento:</label> <input  class="form-control"  id="id_complemento" name="complemento" type="text" value={{atual_endereco.complemento}} />
-                </p>
-            </div>
-            <div class="form-group" >
-                {{ endereco_form.CEP.errors }}
-                <p class="required">
-                    <label for="id_CEP">CEP:</label> <input class="form-control" id="id_CEP" name="CEP" type="text" value={{atual_endereco.CEP}} />
-                </p>
-            </div>
+            <h1 class="form-signin-heading">Suas informações de endereço</h1>
+            {{ form.non_field_errors }}
+            <strong>Suas informações de endereço:</strong><br/><br/>
+
+            <strong>Rua:</strong><br/>
+            {{form.ruaForm.errors}}
+            {{form.ruaForm}}
+            <br/>
+
+            <strong>Numero:</strong><br/>
+            {{ form.numeroRuaForm.errors }}
+            {{ form.numeroRuaForm }}
+            <br/>
+
+            <strong>Complemento:</strong><br/>
+            {{ form.complementoForm.errors }}
+            {{ form.complementoForm }}
+            <br/>
+
+            <strong>CEP:</strong><br/>
+            {{ form.CEPForm.errors }}
+            {{ form.CEPForm }}
+            <br/>
+
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
-        {% else %}
-        <strong>Registre seu endereço:</strong><br /><br/>
-        <form role="form" action="{% url 'CadastroEndereco' %}" method="post">
-            {% csrf_token %}
-            {{ endereco_form.non_field_errors }}
-            <div class="form-group" >
-                <p class="required">
-                    <label for="id_rua">Rua:</label> <input  class="form-control"  id="id_rua" name="rua" type="text" />
-                </p>
-            </div>
-            <div class="form-group" >
-                {{ endereco_form.numeroRua.errors }}
-                <p class="required">
-                    <p><label for="id_numeroRua">Numero:</label> <input class="form-control"   id="id_numeroRua" name="numeroRua" type="text" /></p>
-                </p>
-            </div>
-            <div class="form-group" >
-                {{ endereco_form.complemento.errors }}
-                <p class="required">
-                    <label for="id_complemento">Complemento:</label> <input  class="form-control"  id="id_complemento" name="complemento" type="text" />
-                </p>
-            </div>
-            <div class="form-group" >
-                {{ endereco_form.CEP.errors }}
-                <p class="required">
-                    <label for="id_CEP">CEP:</label> <input class="form-control"   id="id_CEP" name="CEP" type="text" />
-                </p>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-        {% endif %}
-        {% endif %}
 
-{% endblock %}
-
-{% block contentz %}
-
-      <h1>Suas informações de endereço</h1>
-
-        {% if registrado %}
-        Obrigado por registrar seu endereço!
-        <a href="{% url 'MinhaConta' %}">voltar para a sua conta</a><br />
-
-        {% else %}
-        <strong>Registre seu endereço</strong><br />
-        <form id="user_form" method="post" action="{% url 'CadastroEndereco' %}">
-
-            {% csrf_token %}
-
-            {{ endereco_form.as_p }}
-
-            <input type="submit" name="submit" value="Register" />
-        </form>
-        {% endif %}
+    {% endif %}
 
 {% endblock %}
